# roofreporter-ai-good-copy

./: .gitignore  AUDIT_google_ads_conversion.md  BACKLINK_OUTREACH_LIST.md  CLAUDE.md  DEBUG-QUICK-DIAL-FINDINGS.md  DEBUG-QUICK-DIAL-VERIFY-REPORT.md  GEMINI.md  PLAN-auto-trace-still-broken-diagnostic.md  README.md  build.mjs  capacitor.config.json  capacitor.config.ts  fix-remote-db-2.sql  fix-remote-db.sql  package-lock.json  package.json  tailwind.input.css  test-run.ts  test_lat53.ts  vite.config.ts  wrangler-cron.jsonc  wrangler.jsonc
.claude/: launch.json  settings.json
analysis/: RoofReporterAI Roof Report _ 5109 53 Ave, Calmar, AB T0C 0V0, Canada, Calmar, AB, T0C 0V0.html
blog-drafts/: 01-ai-roof-measurement-accuracy-vs-eagleview.md  02-free-roof-measurement-tool.md  03-google-solar-api-explained.md  04-solar-design-software-comparison.md  05-ai-receptionist-for-roofing-companies.md  06-drone-roof-inspection-vs-satellite-measurement.md  07-storm-restoration-playbook-48-hours.md  08-solar-roof-suitability-feasibility-report.md  09-roof-replacement-cost-calculator-zip-postal-code.md  10-lead-to-contract-ai-roofing-crm-workflow.md
blog-posts/: 01-ai-roof-measurement-accuracy-vs-eagleview.md  02-free-roof-measurement-tool.md  03-google-solar-api-explained.md  04-solar-design-software-comparison.md  (+11 more)
livekit-agent/: .dockerignore  Dockerfile  README.md  agent.py  deploy.sh  docker-compose.yml  ecosystem.config.cjs  livekit.toml  outbound_agent.py  pyproject.toml  requirements.txt
livekit-agent/src/: agent.py  main.py  outbound_agent.py  report_guide_agent.py
(+745 files in other folders)
